# libut

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/add_noexcept/: CMakeLists.txt
include/check/: CMakeLists.txt
include/constexpr_hash/: CMakeLists.txt
include/curry/: CMakeLists.txt
include/defer/: CMakeLists.txt
include/demangle/: CMakeLists.txt
include/pack_loops/: CMakeLists.txt
include/pair/: CMakeLists.txt
include/print/: CMakeLists.txt
include/ptr_containers/: CMakeLists.txt
include/ptr_containers/include/ut/ptr_containers/: valueptr.hpp
include/realloc_unique_ptr/: CMakeLists.txt
include/smallfn/: CMakeLists.txt
include/sv_to_num/: CMakeLists.txt
scripts/: update_gists
tests/: CMakeLists.txt  add_noexcept.cpp  check.cpp  compiler_warnings.cmake  constexpr_hash.cpp  defer.cpp  demangle.cpp  ownptrvec.cpp  pack_loops.cpp  pair.cpp  ptrvecview.cpp  sv_to_num.cpp  template_helpers.cpp  valueptr.cpp
